--- a/templates/base.html
+++ b/templates/base.html
@@ -7,17 +7,17 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-dark bg-primary navbar-expand-lg p-2">
+        <a class="navbar-brand text-black" href="{% url "home" %}">Hospital Management System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link disabled" href="#">Disabled</a>
+          <div class="navbar-nav ">
+            <a class="nav-item nav-link active bg-danger text-white" href="{% url "home" %}">Home</a>
+            <a class="nav-item nav-link text-white" href="{% url "about" %}">About</a>
+            <a class="nav-item nav-link text-white" href="{% url "contact" %}">Contact</a>
+            <a class="nav-item nav-link text-white " href="{% url "adlogin" %}">Admin Login</a>
           </div>
         </div>
       </nav>
