added all the crud features

--- a/templates/adddoctor.html
+++ b/templates/adddoctor.html
@@ -41,7 +41,7 @@
         </div>
       
         <!-- Submit button -->
-        <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block mb-4">Subscribe</button>
+        <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block mb-4">Add</button>
       </form>
 </body>
 </html>
