--- a/templates/viewappoint.html
+++ b/templates/viewappoint.html
@@ -6,8 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body class="p-3">
     <h1>Appointment list</h1>
+    <button class="btn btn-primary"><a href="{% url 'addappoint' %}" class="text-white">Add Appointment</a></button>
     <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -29,7 +30,7 @@
                 <td>{{d.Patient.Patient_name}}</td>
                 <td>{{d.Book_date}}</td>
                 <td>{{d.Book_time}}</td>
-                <td><button><a href="">Edit</a></button> <button><a href="">Delete</a></button></td>
+                <td><button class="btn btn-success"><a class="text-white" href="{% url "editappoint" d.id %}">Edit</a></button> <button class="btn btn-danger"><a href="{% url "delappoint" d.id %} " class="text-white">Delete</a></button></td>
             </tr>
             {% endfor %}
         
