--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -6,8 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body class="p-3">
     <h1>patient list</h1>
+    <button class="btn btn-primary"><a href="{% url 'addpatient' %}" class="text-white">Add Patient</a></button>
     <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -25,7 +26,7 @@
                 <td>{{d.Patient_name}}</td>
                 <td>{{d.Address}}</td>
                 <td>{{d.Gender}}</td>
-                <td><button><a href="">Edit</a></button> <button><a href="">Delete</a></button></td>
+                <td><button class="btn btn-success"><a href="{% url "editpatient" d.id %}" class="text-white">Edit</a></button> <button class="btn btn-danger"><a href="{% url 'delpatient' d.id %}" class="text-white">Delete</a></button></td>
             </tr>
             {% endfor %}
         
