--- a/templates/addappoint.html
+++ b/templates/addappoint.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-  <h1>Add Appointment</h1>
+{% extends "baseadmin.html" %}
+{% block content %}
+<h1>Add Appointment</h1>
     <form style="width: 22rem;" class="p-2" action="" method="post">
         {% csrf_token %}
         <div data-mdb-input-init class="form-outline mb-4">
@@ -57,5 +50,4 @@
         <!-- Submit button -->
         <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block mb-4">Add</button>
       </form>
-</body>
-</html>
+{% endblock content %}
