--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ">
-            <a class="nav-item nav-link active bg-danger text-white" href="{% url "home" %}">Home</a>
-            <a class="nav-item nav-link text-white" href="{% url "about" %}">About</a>
-            <a class="nav-item nav-link text-white" href="{% url "contact" %}">Contact</a>
-            <a class="nav-item nav-link text-white " href="{% url "adlogin" %}">Admin Login</a>
+            <a class="nav-item nav-link {% if request.path == '/' %}bg-danger{% endif %} text-white" href="{% url "home" %}">Home</a>
+            <a class="nav-item nav-link text-white {% if request.path == '/about' %}bg-danger{% endif %}" href="{% url "about" %}">About</a>
+            <a class="nav-item nav-link text-white {% if request.path == '/contact' %}bg-danger{% endif %}" href="{% url "contact" %}">Contact</a>
+            {% if user.is_authenticated %}
+            <a class="nav-item nav-link text-white" href="{% url "admindash" %}">Admin Dashboard</a>
+            {% else %}
+            <a class="nav-item nav-link text-white" href="{% url "adlogin" %}">Admin Login</a>
+            {% endif %}
           </div>
         </div>
       </nav>
