--- a/templates/editappoint.html
+++ b/templates/editappoint.html
@@ -1,61 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-  <h1>Add Appointment</h1>
-    <form style="width: 22rem;" class="p-2" action="" method="post">
-        {% csrf_token %}
-        <div data-mdb-input-init class="form-outline mb-4">
-            <label class="form-label" for="form5Example1">Doctors Name</label>
-            <select name="doctor" id="" class="form-control">
-                {% for d in mydoc %}
-                <option value="{{d.Doctor_name}}" {% if d.Doctor_name == dname %}selected{% endif %} >{{d.Doctor_name}}</option>
-                {% endfor %}
-            </select>
-        </div>
-      
-
-        <div data-mdb-input-init class="form-outline mb-4">
-          <label class="form-label" for="form5Example2">Patients Name</label>
-          <select name="patient" id="" class="form-control">
-            {% for p in mypatient %}
-                <option value="{{p.Patient_name}}" {% if p.Patient_name == pname%}selected{% endif %}>{{p.Patient_name}}</option>
+{% extends "baseadmin.html" %}
+{% block content %}
+<h1>Add Appointment</h1>
+<form style="width: 22rem;" class="p-2" action="" method="post">
+    {% csrf_token %}
+    <div data-mdb-input-init class="form-outline mb-4">
+        <label class="form-label" for="form5Example1">Doctors Name</label>
+        <select name="doctor" id="" class="form-control">
+            {% for d in mydoc %}
+            <option value="{{d.Doctor_name}}" {% if d.Doctor_name == dname %}selected{% endif %} >{{d.Doctor_name}}</option>
             {% endfor %}
-          </select>
-        </div>
+        </select>
+    </div>
+  
 
-        <div data-mdb-input-init class="form-outline mb-4">
-          <label class="form-label" for="form5Example2">Book Date</label>
-            <input type="date" class="form-control" name="bookdate" value="{{bdate}}">
-        </div>
+    <div data-mdb-input-init class="form-outline mb-4">
+      <label class="form-label" for="form5Example2">Patients Name</label>
+      <select name="patient" id="" class="form-control">
+        {% for p in mypatient %}
+            <option value="{{p.Patient_name}}" {% if p.Patient_name == pname%}selected{% endif %}>{{p.Patient_name}}</option>
+        {% endfor %}
+      </select>
+    </div>
 
-        <div data-mdb-input-init class="form-outline mb-4">
-            <label class="form-label" for="form5Example2">Book time</label>
-              <input type="time" class="form-control" name="booktime" value="{{btime}}">
-          </div>
-        
-      
-        <!-- Checkbox -->
-        <div class="form-check d-flex justify-content-center mb-4">
-          <input
-            class="form-check-input me-2"
-            type="checkbox"
-            value=""
-            id="form5Example3"
-            checked
-          />
-          <label class="form-check-label" for="form5Example3">
-            I have read and agree to the terms
-          </label>
-        </div>
-      
-        <!-- Submit button -->
-        <button data-mdb-ripple-init type="submit" class="btn btn-success btn-block mb-4">Edit</button>
-      </form>
-</body>
-</html>
+    <div data-mdb-input-init class="form-outline mb-4">
+      <label class="form-label" for="form5Example2">Book Date</label>
+        <input type="date" class="form-control" name="bookdate" value="{{bdate}}">
+    </div>
+
+    <div data-mdb-input-init class="form-outline mb-4">
+        <label class="form-label" for="form5Example2">Book time</label>
+          <input type="time" class="form-control" name="booktime" value="{{btime}}">
+      </div>
+    
+  
+    <!-- Checkbox -->
+    <div class="form-check d-flex justify-content-center mb-4">
+      <input
+        class="form-check-input me-2"
+        type="checkbox"
+        value=""
+        id="form5Example3"
+        checked
+      />
+      <label class="form-check-label" for="form5Example3">
+        I have read and agree to the terms
+      </label>
+    </div>
+  
+    <!-- Submit button -->
+    <button data-mdb-ripple-init type="submit" class="btn btn-success btn-block mb-4">Edit</button>
+  </form>
+{% endblock content %}
