--- a/templates/editpatient.html
+++ b/templates/editpatient.html
@@ -1,47 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-  <h1>Edit Patient </h1>
-    <form style="width: 22rem;" class="p-2" action="" method="post">
-        {% csrf_token %}
-        <div data-mdb-input-init class="form-outline mb-4">
-          <input type="text" id="form5Example1" name="name" value={{name}} class="form-control" />
-          <label class="form-label" for="form5Example1">Patients Name</label>
-        </div>
-      
+{% extends "baseadmin.html" %}
+{% block content %}
+<h1>Edit Patient </h1>
+<form style="width: 22rem;" class="p-2" action="" method="post">
+    {% csrf_token %}
+    <div data-mdb-input-init class="form-outline mb-4">
+      <input type="text" id="form5Example1" name="name" value={{name}} class="form-control" />
+      <label class="form-label" for="form5Example1">Patients Name</label>
+    </div>
+  
 
-        <div data-mdb-input-init class="form-outline mb-4">
-          <input type="text" id="form5Example2" name="address" value={{add}} class="form-control" />
-          <label class="form-label" for="form5Example2">Address</label>
-        </div>
+    <div data-mdb-input-init class="form-outline mb-4">
+      <input type="text" id="form5Example2" name="address" value={{add}} class="form-control" />
+      <label class="form-label" for="form5Example2">Address</label>
+    </div>
 
-        <div data-mdb-input-init class="form-outline mb-4">
-          <input type="text" id="form5Example2" name="gender" value={{gender}} class="form-control" />
-          <label class="form-label" for="form5Example2">Gender</label>
-        </div>
-        
-        <!-- Checkbox -->
-        <div class="form-check d-flex justify-content-center mb-4">
-          <input
-            class="form-check-input me-2"
-            type="checkbox"
-            value=""
-            id="form5Example3"
-            checked
-          />
-          <label class="form-check-label" for="form5Example3">
-            I have read and agree to the terms
-          </label>
-        </div>
-      
-        <!-- Submit button -->
-        <button data-mdb-ripple-init type="submit" class="btn btn-success btn-block mb-4">Edit</button>
-      </form>
-</body>
-</html>
+    <div data-mdb-input-init class="form-outline mb-4">
+      <input type="text" id="form5Example2" name="gender" value={{gender}} class="form-control" />
+      <label class="form-label" for="form5Example2">Gender</label>
+    </div>
+    
+    <!-- Checkbox -->
+    <div class="form-check d-flex justify-content-center mb-4">
+      <input
+        class="form-check-input me-2"
+        type="checkbox"
+        value=""
+        id="form5Example3"
+        checked
+      />
+      <label class="form-check-label" for="form5Example3">
+        I have read and agree to the terms
+      </label>
+    </div>
+  
+    <!-- Submit button -->
+    <button data-mdb-ripple-init type="submit" class="btn btn-success btn-block mb-4">Edit</button>
+  </form>
+{% endblock content %}
