--- a/templates/viewappoint.html
+++ b/templates/viewappoint.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body class="p-3">
-    <h1>Appointment list</h1>
+{% extends "baseadmin.html" %}
+{% block content %}
+<h1>Appointment list</h1>
     <button class="btn btn-primary"><a href="{% url 'addappoint' %}" class="text-white">Add Appointment</a></button>
     <table class="table">
         <thead class="thead-dark">
@@ -36,5 +29,4 @@
         
         </tbody>
       </table>
-</body>
-</html>
+{% endblock content %}
