--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -1,36 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body class="p-3">
-    <h1>patient list</h1>
-    <button class="btn btn-primary"><a href="{% url 'addpatient' %}" class="text-white">Add Patient</a></button>
-    <table class="table">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Patient Name</th>
-            <th scope="col">Address</th>
-            <th scope="col">Gender</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-            {% for d in patients %}
-            <tr>
-                <td>{{d.id}}</td>
-                <td>{{d.Patient_name}}</td>
-                <td>{{d.Address}}</td>
-                <td>{{d.Gender}}</td>
-                <td><button class="btn btn-success"><a href="{% url "editpatient" d.id %}" class="text-white">Edit</a></button> <button class="btn btn-danger"><a href="{% url 'delpatient' d.id %}" class="text-white">Delete</a></button></td>
-            </tr>
-            {% endfor %}
-        
-        </tbody>
-      </table>
-</body>
-</html>
+{% extends "baseadmin.html" %}
+{% block content %}
+<h1>patient list</h1>
+<button class="btn btn-primary"><a href="{% url 'addpatient' %}" class="text-white">Add Patient</a></button>
+<table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Patient Name</th>
+        <th scope="col">Address</th>
+        <th scope="col">Gender</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for d in patients %}
+        <tr>
+            <td>{{d.id}}</td>
+            <td>{{d.Patient_name}}</td>
+            <td>{{d.Address}}</td>
+            <td>{{d.Gender}}</td>
+            <td><button class="btn btn-success"><a href="{% url "editpatient" d.id %}" class="text-white">Edit</a></button> <button class="btn btn-danger"><a href="{% url 'delpatient' d.id %}" class="text-white">Delete</a></button></td>
+        </tr>
+        {% endfor %}
+    
+    </tbody>
+  </table>
+{% endblock content %}
