--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Contact | Hospital Management System{% endblock title %}
 {% block content %}
-<main>
-    <h1>contact</h1>
+<main style="display: flex; flex-direction: column; justify-content: center; align-items: center;" class="mt-3">
+    <h1>Contact Form</h1>
+    <form action="" method="post" style="width: 60%; display: flex; flex-direction: column ; gap: 1rem;">
+        {% csrf_token %}
+        {{form}}
+        <button class="btn btn-primary" style="width: max-content;">Send Message</button>
+    </form>
 </main>
 {% endblock content %}
