added the frontend part

--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -12,7 +12,7 @@
         {% csrf_token %}
         <!-- Email input -->
         <div data-mdb-input-init class="form-outline mb-4">
-          <input type="text" id="form1Example1" name="username" class="form-control" />
+          <input type="text" id="form1Example1" name="username" class="form-control" placeholder='both username and password is "admin"' />
           <label class="form-label" for="form1Example1">Username</label>
         </div>
       
