--- a/templates/base.html
+++ b/templates/base.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/base.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-primary navbar-expand-lg p-2">
+    <nav class="navbar navbar-dark navbar-expand-lg p-2" style="background-color: #E6EBE0;">
         <a class="navbar-brand text-black" href="{% url "home" %}">Hospital Management System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ">
-            <a class="nav-item nav-link {% if request.path == '/' %}bg-danger{% endif %} text-white" href="{% url "home" %}">Home</a>
-            <a class="nav-item nav-link text-white {% if request.path == '/about' %}bg-danger{% endif %}" href="{% url "about" %}">About</a>
-            <a class="nav-item nav-link text-white {% if request.path == '/contact' %}bg-danger{% endif %}" href="{% url "contact" %}">Contact</a>
+            <a class="nav-item nav-link text-black {% if request.path == '/' %} nav-select white-text {% endif %}" href="{% url "home" %}">Home</a>
+            <a class="nav-item nav-link text-black {% if request.path == '/about' %}nav-select{% endif %}" href="{% url "about" %}">About</a>
+            <a class="nav-item nav-link text-black {% if request.path == '/contact' %}nav-select{% endif %}" href="{% url "contact" %}">Contact</a>
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link text-white" href="{% url "admindash" %}">Admin Dashboard</a>
+            <a class="nav-item nav-link text-black" href="{% url "admindash" %}">Admin Dashboard</a>
             {% else %}
-            <a class="nav-item nav-link text-white" href="{% url "adlogin" %}">Admin Login</a>
+            <a class="nav-item nav-link text-black" href="{% url "adlogin" %}">Admin Login</a>
             {% endif %}
           </div>
         </div>
