--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/static/css/base.css">
 {% extends "base.html" %}
 {% block title %}Contact | Hospital Management System{% endblock title %}
 {% block content %}
@@ -6,7 +7,7 @@
     <form action="" method="post" style="width: 60%; display: flex; flex-direction: column ; gap: 1rem;">
         {% csrf_token %}
         {{form}}
-        <button class="btn btn-primary" style="width: max-content;">Send Message</button>
+        <button class="btn  nav-select" style="width: max-content;">Send Message</button>
     </form>
 </main>
 {% endblock content %}
